style.css
@font-face {
    font-family: "Baloo";
    src: url('assets/Baloo-Regular.ttf');
}

body, html {
    font-family: "Baloo";
    font-size: 1rem;
    margin: 0;
    min-width: 16svw;
    height: 100vh;
    overflow: hidden;
    background-color: #000;
}

.logo {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: 53vh;
    transition: all 0.4s ease-out;
}

.logo:hover {
    width: 54.5vh;
    transition: all 0.3s ease-in;
}

* {
    color: #C8FF00;
}
.midii {
    letter-spacing: 4px;
    font-size: 4vh; 
    text-align: center; 
    margin: 1.5vh;
}

.navbar {
    text-align: center;
    margin: 0;
    padding: 0;
}

.navbar li {
    display: inline-block;
    letter-spacing: 0.175em;
    font-size: 1.5rem;
    margin: 0 0.3125rem;
}

.navbar a {
    border: solid 3px;
    padding: 0 20px 0 25px;
    text-decoration: none;
    border-radius: 2em;
    transition: all 0.125s ease-out;
    display: inline-block;
}

.navbar a:hover {
    transform: scale(1.05);
    transition: all 0.125s ease-in;
}

.roundALL { border-radius: 1.5em; }
.roundL { border-radius: 1.5em 0 0 1.5em; }
.roundR { border-radius: 0 1.5em 1.5em 0; }
.roundT { border-radius: 1.5em 1.5em 0 0; }
.roundB { border-radius: 0 0 1.5em 1.5em; }
.roundBR { border-radius: 0 0 1.5em 0; }
.roundBL { border-radius: 0 0 0 1.5em; }
.roundTR { border-radius: 0 1.5em 0 0; }
.roundTL { border-radius: 1.5em 0 0 0; }

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-thumb {
    background-color: #C8FF00;
    border-radius: 2px;
}

section {
    height: calc(100% - 65%);
    width: 100vw;
    position: absolute;
    opacity: 0;
    visibility: hidden;
    overflow-y: auto;
    transition: opacity 0.1s cubic-bezier(0, 0, 0.21, 1), visibility 0s 0.1s;
}

a[id="start"]:target ~ #start,
a[id="about"]:target ~ #about,
a[id="links"]:target ~ #links,
a[id="music"]:target ~ #music,
a[id="edt"]:target ~ #edt {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.45s cubic-bezier(0, 0, 0.21, 1), visibility 0s;
}

@media screen and (max-width: 920px) {
    body, html {
        font-size: 0.925rem;
    }

    .logo {
        width: 40vw;
    }

    .logo:hover {
        width: 42vw;
    }

    .midii {
        font-size: 3.5vh;
    }

    .navbar li {
        font-size: 1.25rem;
        margin: 0.25rem 0.25rem;
    }

    .navbar a {
        border-radius: 1.5em;
    }
}

@media screen and (max-width: 768px) {

    .midii {
        font-size: 4.3vh;
    }

    .navbar li {
        font-size: 1.75rem;
        margin: 0.25rem 0.25rem;
    }
}

@media screen and (max-width: 480px) {
    .logo {
        width: 53vw;
    }

    .logo:hover {
        width: 54.5vw;
    }

    .navbar a {
        padding: 0;
        width: 70vw;
        display: table
        border-radius: 1.5em;
    }
}

